# surrogate-lab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup_env.sh
configs/: config.yaml
notebooks/: training.ipynb
scripts/: train.py
src/data/: loader.py  schema.py
src/evaluation/: __init__.py  metrics.py  visualization.py
src/features/: engineer.py  splitter.py
src/models/: factory.py  mlp.py
src/training/: trainer.py
src/utils/: config.py  logging_utils.py
tests/: __init__.py  conftest.py  test_config.py  test_engineer.py  test_loader.py  test_logging_utils.py  test_metrics.py  test_models.py  test_schema.py  test_splitter.py  test_trainer.py  test_visualization.py
